# link-android

./: build.gradle  config.gradle  gradle.properties  settings.gradle
commonlib/: CMakeLists.txt  build.gradle
commonlib/src/androidTest/java/cn/linked/commonlib/: ExampleInstrumentedTest.java
commonlib/src/main/: AndroidManifest.xml
commonlib/src/main/cpp/bsdiffpatch/: CMakeLists.txt  bsdiff.c  bspatch.c
commonlib/src/main/cpp/bzip2/: CMakeLists.txt
commonlib/src/main/java/cn/linked/commonlib/exception/: ApplicationException.java  UpdateInterruptException.java
commonlib/src/main/java/cn/linked/commonlib/jni/diffpatch/: BSDiffPatch.java  IDiffPatch.java
commonlib/src/main/java/cn/linked/commonlib/promise/: Promise.java  PromiseState.java
commonlib/src/main/java/cn/linked/commonlib/update/Incrementalupdate/: DefaultIncrementUpdater.java  IIncrementalUpdater.java
commonlib/src/main/java/cn/linked/commonlib/update/exception/: UpdateInterruptException.java
commonlib/src/main/java/cn/linked/commonlib/update/util/: MD5Validator.java
commonlib/src/main/java/cn/linked/commonlib/util/: BindingAdapterCo.java  ColorUtil.java  DefaultIncrementUpdater.java  DensityUtil.java  IBlur.java  IIncrementUpdater.java  Interpolator.java  MD5Validator.java  RenderScriptBlur.java  UnitUtil.java
commonlib/src/main/java/cn/linked/commonlib/util/common/: AppUtils.java  LoopHandler.java
commonlib/src/main/java/cn/linked/commonlib/util/drawable/: ShadowDrawable.java  ShadowDrawableInterpolator.java
commonlib/src/main/java/cn/linked/commonlib/util/screenshot/: DrawingCacheScreenShot.java  FrameBufferScreenShot.java  IScreenShot.java  PixelCopyScreenShot.java
commonlib/src/main/java/cn/linked/commonlib/util/updater/: DefaultIncrementUpdater.java  IIncrementUpdater.java
commonlib/src/main/java/cn/linked/commonlib/view/: AppScrollView.java  BlurView.java  ExtensionViewPager.java  RoundRectShadowCoverView.java  StatusBarPaddingFrameLayout.java
commonlib/src/main/java/cn/linked/commonlib/viewmodel/: UpdatePanelViewModel.java
commonlib/src/main/jni/: CMakeLists.txt
commonlib/src/main/jni/bsdiffpatch/: CMakeLists.txt  bsdiff.c  bspatch.c  native_diff.h  native_patch.h
commonlib/src/main/jni/bzip2/: CMakeLists.txt
commonlib/src/main/res/drawable/: ripple_update_panel_button.xml  shape_round_rect_update_panel_text_view.xml  shape_template_close.xml  shape_template_round_rect.xml  shape_update_panel_close.xml
commonlib/src/main/res/layout/: update_panel_layout.xml
commonlib/src/main/res/values/: attrs.xml  styles.xml
commonlib/src/test/java/cn/linked/commonlib/: ExampleUnitTest.java  ProjectInfo.java
(+155 files in other folders)
